Update pom.xml for mac support.