@@ -134,6 +134,10 @@
                     <options>
                         <option>--add-modules</option>
                         <option>javafx.controls,javafx.fxml</option>
+                        <option>--add-opens</option>
+                        <option>java.base/java.lang=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>java.base/java.lang=ALL-UNNAMED</option>
                     </options>
                 </configuration>
             </plugin>
